Issue #15181: importlib bytecode is unsigned and shouldn't have negative numbers. This fixes a compiler warning with suncc.